[project]
name = "react-agent-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.30",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.13",
    "langsmith>=0.7.32",
    "python-dotenv>=1.2.2",
]
